[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
egui-winit = "0.18.0"
glow = "0.11.2"
egui_glow = "0.18.1"
glutin = "0.28.0"

[lib]
crate-type = ["dylib"]
