[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
eframe = { path = "./lib/egui/eframe" }
glutin = "0.28.0"

[lib]
crate-type = ["dylib"]
