[package]
name = "bingushack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0", features = ["invocation"] }
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "handleapi"] }
eframe = { path = "./lib/egui/eframe" }
glutin = "0.28.0"
obfstr = "0.4.1"
uniqueid = "0.2.6"
rand = "0.8.5"
crochet = "0.1"
gl = "0.14.0"
widestring = "1.0.2"
once_cell = "1.16.0"
enum_dispatch = "0.3.8"

[lib]
crate-type = ["dylib"]

[profile.release]
debug = false
strip = true
panic = "abort"
